BMI Calculation, upcommimg events static page

--- a/public/css/shortcodes.css
+++ b/public/css/shortcodes.css
@@ -83,7 +83,15 @@
 	.dt-sc-button.large::before { line-height:59px; }
 	.dt-sc-button.xlarge::before { line-height:78px; }
 
-	a.dt-sc-button:hover { -webkit-transform: rotateX(90deg) translateY(-22px); -moz-transform: rotateX(90deg) translateY(-22px); transform: rotateX(90deg) translateY(-22px); }
+	a.dt-sc-button:hover { -webkit-transform: rotateX(0deg) translateY(0px);
+	 -moz-transform: rotateX(0deg) translateY(0px); 
+	 
+	 transform: rotateX(0deg) translateY(0px); }
+
+	/*a.dt-sc-button:hover { -webkit-transform: rotateX(90deg) translateY(-22px);
+	 -moz-transform: rotateX(90deg) translateY(-22px); 
+
+	 transform: rotateX(90deg) translateY(-22px); }*/
 	.dt-sc-button:hover { color:#ffffff; }
 	.dt-sc-button.bordered { background:transparent; border:1px solid }
 	.dt-sc-button.bordered:hover { background:#1c1c1c; }
