--- a/public/skins/green/style.css
+++ b/public/skins/green/style.css
@@ -9155,4 +9155,33 @@ text-decoration:none;
 
 /*# sourceMappingURL=style.css.map */
 
+.top-alert {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 100000;
+  left: 0;
+  padding: 20px;
+  display: inline-block;
+  text-align: center;
+}
+.top-alert .alert {
+  width: auto !important;
+  height: 100%;
+  display: inline;
+  position: relative;
+  margin: 0;
+  float: right;
+}
+.top-alert .alert .close {
+  position: absolute;
+  top: 11px;
+  right: 10px;
+  color: inherit;
+}
+.top-alert .alert-info {
+	color: #f5f3f3;
+    background-color: #f26522;
+    border-color: #f5f3f3;
+}
 
