--- a/public/skins/green/style.css
+++ b/public/skins/green/style.css
@@ -9170,8 +9170,9 @@ text-decoration:none;
   height: 100%;
   display: inline;
   position: relative;
-  margin: 0;
+  margin: 3% 0%;
   float: right;
+
 }
 .top-alert .alert .close {
   position: absolute;
